# CG-Final-Project

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGLFW3.cmake  FindGLM.cmake
include/glad/: glad.h
resources/shaders/: body_vertex.shader  bottom_vertex.shader  fragment.shader  grass_fragment.shader  grass_geometry.shader  light_fragment.shader  terrain_fragment.shader  terrain_geometry.shader  terrain_vertex.shader  top_vertex.shader  vertex.shader  water_fragment.shader  water_vertex.shader
src/: Camera.h  FrameBuffer.h  Intersection.h  Mesh.cpp  Mesh.h  Ray.cpp  Ray.h  Shader.cpp  Shader.h  Source.cpp  Texture.cpp  Texture.h  main.cpp  main.txt
